# calico

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config-example.yml  config_example.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 05f4f2e1029e_add_user_discriminator_column.py  1ba4762cd490_add_category_table.py  21dbb05d8941_add_message_table.py  33acd613eb6a_add_channel_table.py  57ad979c6250_add_user_table.py  5f5a229a98ca_add_cascading_deletions.py  83f1945c25f2_make_thread_created_at_nullable.py  9382aebc9f9b_add_thread_table.py  b3670ac16e43_remove_user_staff_column.py  ed33989b1790_add_reaction_table.py
src/: __init__.py  __main__.py
src/core/bot/: __init__.py  bot.py
src/core/database/: __init__.py  db.py  models.py
src/exts/commands/: __init__.py  about.py
src/exts/listeners/: __init__.py  on_bulk_message_delete.py  on_message.py
src/exts/listeners/members/: __init__.py  on_member_join.py  on_member_remove.py  on_member_update.py
src/exts/listeners/messages/: __init__.py  on_message.py  on_message_delete.py
src/exts/listeners/reactions/: __init__.py  on_raw_reaction_add.py  on_raw_reaction_clear.py  on_raw_reaction_clear_emoji.py  on_raw_reaction_remove.py
src/exts/utils/: __init__.py  sync.py
src/utils/: __init__.py  config.py
