[tool.poetry]
name = "calico"
version = "0.1.0"
description = "A metrics collection and processing tool for Discord."
authors = ["Jacob Monck <jacobamonck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.8.1"
loguru = "^0.6.0"
taskipy = "^1.10.4"
python-dotenv = "^1.0.0"
humanize = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.taskipy.tasks]
start = "python -O -m src"
lint = "black . -v && isort --profile black ."

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
